--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,21 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: js-app
+  name: {{ .Release.Name }}-deployment
   labels:
-    app: js-app
+    app: {{ .Release.Name }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: js-app
+      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: js-app
+        app: {{ .Release.Name }}
     spec:
       containers:
       - name: js-app
-        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         ports:
-        - containerPort: 32000
+        - containerPort: 3001
+        env:
+        - name: NODE_ENV
+          value: "production"
