--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: js-app
+  name: {{ .Release.Name }}-service
+  labels:
+    app: {{ .Release.Name }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: 32000
-    targetPort: 32000
+  - port: {{ .Values.service.port }}
+    targetPort: 3001
   selector:
-    app: js-app
+    app: {{ .Release.Name }}
